--- a/style.css
+++ b/style.css
@@ -1,8 +1,6 @@
-*{
-    background-color: rgb(208, 240, 240);
-}
 body > table{
     width: 80%;
+
 }
 
 table{
@@ -33,7 +31,7 @@ input[type=text], input[type=number] {
 
 input[type=submit]{
     width: 30%;
-    background-color: #ddd;
+    background-color: #b5e2f3;
     color: #000;
     padding: 14px 20px;
     margin: 8px 0;
